--- a/argocd/bootstrap/app-of-apps-prod.yaml
+++ b/argocd/bootstrap/app-of-apps-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: random-api-prod
+  name: app-of-apps
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -9,14 +9,14 @@ spec:
   project: default
   source:
     repoURL: https://github.com/stefan-raducan/k8s-tests.git
-    targetRevision: main
-    path: argocd-apps/apps/random-api/overlays/prod
+    targetRevision: develop
+    path: argocd/envs/prod
   destination:
     server: https://kubernetes.default.svc
-    namespace: random-api
+    namespace: argocd
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: true # Automatically delete apps removed from Git
+      selfHeal: true # Automatically sync when Git changes
     syncOptions:
       - CreateNamespace=true
