restructure argo files

--- a/argocd/apps/random-api/base/deployment.yaml
+++ b/argocd/apps/random-api/base/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: random-api
-  namespace: random-api
   labels:
     app: random-api
 spec:
@@ -25,3 +24,6 @@ spec:
             requests:
               cpu: 100m
               memory: 128Mi
+            limits:
+              cpu: 200m
+              memory: 256Mi
