--- a/argocd/envs/prod/test-cluster/random-api/kustomization.yaml
+++ b/argocd/envs/prod/test-cluster/random-api/kustomization.yaml
@@ -1,10 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: random-api
+namespace: random-api-prod
 
 resources:
-  - ../../base
+  - ../../../../apps/random-api/overlays/ha
   - namespace.yaml
 
 commonLabels:
@@ -25,21 +25,9 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/resources/requests/memory
         value: "256Mi"
-      - op: add
-        path: /spec/template/spec/containers/0/resources/limits
-        value:
-          cpu: "500m"
-          memory: "512Mi"
-  - target:
-      kind: ScaledObject
-      name: random-scaledobject
-    patch: |-
       - op: replace
-        path: /spec/minReplicaCount
-        value: 3
+        path: /spec/template/spec/containers/0/resources/limits/cpu
+        value: "500m"
       - op: replace
-        path: /spec/maxReplicaCount
-        value: 20
-      - op: replace
-        path: /spec/pollingInterval
-        value: 5
+        path: /spec/template/spec/containers/0/resources/limits/memory
+        value: "512Mi"
