--- a/argocd/envs/prod/test-cluster/random-api/kustomization.yaml
+++ b/argocd/envs/prod/test-cluster/random-api/kustomization.yaml
@@ -1,11 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: random-api-prod
+namespace: random-api
 
 resources:
   - ../../../../apps/random-api/overlays/ha
-  - namespace.yaml
 
 commonLabels:
   environment: prod
