--- a/argocd/envs/dev/test-cluster/nginx/kustomization.yaml
+++ b/argocd/envs/dev/test-cluster/nginx/kustomization.yaml
@@ -9,10 +9,6 @@ resources:
 commonLabels:
   environment: dev
 
-replicas:
-  - name: nginx
-    count: 1
-
 patches:
   - target:
       kind: Deployment
@@ -30,3 +26,6 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/resources/limits/memory
         value: "128Mi"
+      - op: replace
+        path: /spec/maxReplicaCount
+        value: 5
