--- a/argocd/apps/random-api/overlays/minimal/kustomization.yaml
+++ b/argocd/apps/random-api/overlays/minimal/kustomization.yaml
@@ -5,3 +5,10 @@ resources:
   - ../../base
 
 patches:
+  # - target:
+  #     kind: Deployment
+  #     name: random-api
+  #   patch: |-
+  #     - op: replace
+  #       path: /spec/replicas
+  #       value: 1
