--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,7 +10,7 @@ isort==5.13.2
 flake8==7.1.1
 
 # Testing (add as needed)
-# pytest==8.3.4
+pytest==8.3.4
 # pytest-cov==6.0.0
 
 # Type checking (add as needed)
