--- a/.github/workflows/back-merge-develop.yml
+++ b/.github/workflows/back-merge-develop.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout develop
           git merge origin/main
           git push
