--- a/.github/workflows/app-tests.yml
+++ b/.github/workflows/app-tests.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   unit-tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, arc-runner]
     defaults:
       run:
         working-directory: ./random-api
