--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-test-push:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, arc-runner]
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: read
