--- a/.github/workflows/back-merge-develop.yml
+++ b/.github/workflows/back-merge-develop.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   backmerge:
-    runs-on: [self-hosted, arc-runner]
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
