--- a/argocd/envs/dev/test-cluster/app-otel-operator.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-operator.yaml
@@ -12,14 +12,15 @@ spec:
   source:
     repoURL: https://open-telemetry.github.io/opentelemetry-helm-charts
     chart: opentelemetry-collector
-    targetRevision: 0.44.0 # Using a specific stable version
+    # targetRevision: 0.44.0
     helm:
       releaseName: opentelemetry-collector
       values: |
         mode: daemonset
 
         image:
-          repository: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-k8s:sha256-0e2fc739e240e8d89191f735f5f9f2a351f381230a1703e92c71235170a96900.sig
+          repository: otel/opentelemetry-collector-k8s
+
 
         presets:
           # enables the k8sattributesprocessor and adds it to the traces, metrics, and logs pipelines
