--- a/argocd/envs/dev/test-cluster/app-otel-collector.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-collector.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     repoURL: https://open-telemetry.github.io/opentelemetry-helm-charts
     chart: opentelemetry-collector
-    targetRevision: 0.142.0
+    targetRevision: "0.141.1"
     helm:
       releaseName: opentelemetry-collector
       values: |
