--- a/argocd/envs/dev/test-cluster/app-otel-collector.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-collector.yaml
@@ -28,9 +28,36 @@ spec:
           # enables the kubeletstatsreceiver and adds it to the metrics pipelines
           kubeletMetrics:
             enabled: true
-          # Enables the filelogreceiver and adds it to the logs pipelines
           logsCollection:
             enabled: true
+
+        config:
+          exporters:
+            otlp:
+              endpoint: jaeger-collector.jaeger.svc.cluster.local:4317
+              tls:
+                insecure: true
+          service:
+            pipelines:
+              traces:
+                exporters: [otlp]
+                processors: [k8sattributes, memory_limiter, batch]
+                receivers: [otlp]
+
+          ## If you want to send your data somewhere you need to
+          ## configure an exporter, such as the otlp exporter
+          # config:
+          #   exporters:
+          #     otlp:
+          #       endpoint: "<SOME BACKEND>"
+          #   service:
+          #     pipelines:
+          #       traces:
+          #         exporters: [ otlp ]
+          #       metrics:
+          #         exporters: [ otlp ]
+          #       logs:
+          #         exporters: [ otlp ]
 
   destination:
     server: https://kubernetes.default.svc
