--- a/argocd/envs/dev/test-cluster/app-jaeger.yaml
+++ b/argocd/envs/dev/test-cluster/app-jaeger.yaml
@@ -36,3 +36,6 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+
+# get access to the jaeger UI via:
+# kubectl port-forward svc/jaeger-query 16686:16686 -n jaeger
