--- a/argocd/envs/dev/test-cluster/app-otel-collector.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-collector.yaml
@@ -31,6 +31,10 @@ spec:
           logsCollection:
             enabled: true
 
+        service:
+          enabled: true
+          type: ClusterIP
+
         config:
           exporters:
             otlp:
