add debug exporter to traces pipeline

--- a/argocd/envs/dev/test-cluster/app-otel-collector.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-collector.yaml
@@ -44,7 +44,7 @@ spec:
           service:
             pipelines:
               traces:
-                exporters: [otlp]
+                exporters: [otlp, debug]
                 processors: [k8sattributes, memory_limiter, batch]
                 receivers: [otlp]
 
