--- a/argocd/envs/dev/test-cluster/app-otel-collector.yaml
+++ b/argocd/envs/dev/test-cluster/app-otel-collector.yaml
@@ -41,6 +41,13 @@ spec:
               endpoint: jaeger-collector.jaeger.svc.cluster.local:4317
               tls:
                 insecure: true
+          receivers:
+            otlp:
+              protocols:
+                grpc:
+                  endpoint: 0.0.0.0:4317
+                http:
+                  endpoint: 0.0.0.0:4318
           service:
             pipelines:
               traces:
