--- a/.github/workflows/app-tests.yml
+++ b/.github/workflows/app-tests.yml
@@ -38,5 +38,6 @@ jobs:
           pip install httpx pytest
 
       - name: Run tests
-        run: |
-          pytest tests/
+        uses: krzko/run-with-telemetry@v0.6.0
+        with:
+          run: pytest tests/
