--- a/.github/workflows/app-tests.yml
+++ b/.github/workflows/app-tests.yml
@@ -34,10 +34,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install httpx pytest
+          export OTEL_EXPORTER_OTLP_ENDPOINT=jaeger-collector.jaeger.svc.cluster.local:4317
+          otel-cli exec --service app-tests --name "install pip dependencies" pip install -r requirements.txt
+          otel-cli exec --service app-tests --name "install pip extra dependencies" pip install httpx pytest
 
       - name: Run tests
-        uses: krzko/run-with-telemetry@v0.6.0
-        with:
-          run: pytest tests/
+        run: |
+          pytest tests/
