install otel-cli in app-tests workflow

--- a/.github/workflows/app-tests.yml
+++ b/.github/workflows/app-tests.yml
@@ -32,6 +32,11 @@ jobs:
           python-version: "3.14"
           cache: "pip"
 
+      - name: Install otel-cli
+        run: |
+          curl -L https://github.com/equinix-labs/otel-cli/releases/download/v0.4.4/otel-cli_0.4.4_linux_amd64.tar.gz | tar -xz
+          sudo mv otel-cli /usr/local/bin/
+
       - name: Install dependencies
         run: |
           export OTEL_EXPORTER_OTLP_ENDPOINT=jaeger-collector.jaeger.svc.cluster.local:4317
