--- a/.github/workflows/app-tests.yml
+++ b/.github/workflows/app-tests.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Install dependencies
         run: |
           export OTEL_EXPORTER_OTLP_ENDPOINT=jaeger-collector.jaeger.svc.cluster.local:4317
-          otel-cli exec --service app-tests --name "install pip dependencies" pip install -r requirements.txt
-          otel-cli exec --service app-tests --name "install pip extra dependencies" pip install httpx pytest
+          otel-cli exec --service app-tests --name "install pip dependencies" -- pip install -r requirements.txt
+          otel-cli exec --service app-tests --name "install pip extra dependencies" -- pip install httpx pytest
 
       - name: Run tests
         run: |
-          pytest tests/
+          otel-cli exec --service app-tests --name "run tests" -- pytest tests/
