--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ random-api/.direnv
 .terraform.tfstate.lock.info
 .terraform.lock.hcl
 terraform.tfstate
-terraform.tfstate.backup
+terraform/terraform.tfstate.*
 
 # Node.js / Prettier
 node_modules/
